tests/parser/fixtures/preprocessor/errors/error3.cpp
#include <tests/parser/fixtures/preprocessor/empty.cpp>

int foo 132151

#define boo fdsa
